--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,15 +1,98 @@
 set -g default-terminal "screen-256color"
 
+# mouse settings
+#set -g mode-mouse on
+#setw -g mouse-select-window on
+#setw -g mouse-select-pane on
+#setw -g mouse-resize-pane on
+
 # remap prefix to Control + a
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# window navigation
+bind-key -n M-C-h prev
+bind-key -n M-C-l next
+
+# quick pane cycling
+#unbind ^A
+#bind ^A select-pane -t :.+
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
 # set scrollback buffer
 set -g history-limit 5000
 
 # statusbar
+set-option -g   status-utf8 on
+set-option -g   status-interval 5
+set-option -g   status-justify left
+set-option -g   status-left-length 15
+#set-option -g   status-left ' #h |'
 set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
 
 # enabling h, j, k, l
 setw -g mode-keys vi
+
+# shortcuts
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+bind -r < resize-pane -L 4
+bind -r > resize-pane -R 4
+bind -r - resize-pane -D 4
+bind -r + resize-pane -U 4
+
+# easily toggle synchronization (mnemonic: e is for echo)
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+
+# Clipboard settings
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
+## Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+## Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+## Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+
+## LOOKS ===============
+# Look 1
+#
+#set -g pane-active-border-fg blue
+#
+#setw -g utf8 on
+#
+#set -g status-utf8 on
+#set -g status-interval 10
+#
+#set -g status-fg white
+#set -g status-bg default
+#set -g status-left "#[fg=colour14]#(whoami)@#h #[fg=colour11]#S#[default]"
+#set -g status-right "#[fg=white] #(date "+%-d/%-m/%y") #[fg=colour14]%H:%M:%S #[default]"
+#
+#set -g status-left-length 100
+#set -g status-right-length 50
+#set -g message-fg white
+#set -g message-bg black
+#set -g message-attr bright
+#
+## default window title colors
+#set-window-option -g window-status-fg white
+#set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+#
+## active window title colors
+#set-window-option -g window-status-current-fg colour10
+#set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr dim
+
+
