--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,22 +5,116 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# window navigation
-bind-key -n M-C-h prev
-bind-key -n M-C-l next
-
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
 
 # set scrollback buffer
-set -g history-limit 5000
+set -g history-limit 10000
+
+# set parent terminal title to reflect current window in tmux session
+set -g set-titles on
+set -g set-titles-string "#I:#W"
+
+# start index of window/pane with 1, because we're humans, not computers
+set -g base-index 1
+setw -g pane-base-index 1
+
+# enable mouse support
+set -g mouse on
+
+# theme
+## these are named colors, just for convenience
+color_orange="colour166" # 208, 166
+color_purple="colour134" # 135, 134
+color_green="colour076" # 070
+color_blue="colour39"
+color_yellow="colour220"
+color_red="colour160"
+color_black="colour232"
+color_white="white" # 015
+## Change values, but not remove/rename variables itself
+color_dark="$color_black"
+color_light="$color_white"
+color_session_text="$color_blue"
+color_status_text="colour245"
+color_main="$color_orange"
+color_secondary="$color_purple"
+color_level_ok="$color_green"
+color_level_warn="$color_yellow"
+color_level_stress="$color_red"
+color_window_off_indicator="colour088"
+color_window_off_status_bg="colour238"
+color_window_off_status_current_bg="colour254"
 
 # statusbar
-set-option -g   status-interval 5
-set-option -g   status-justify left
-set-option -g   status-left-length 15
-set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
+set-option -g status on
+set-option -g status-interval 5
+set-option -g status-position top
+set-option -g status-justify left
+set-option -g status-left-length 15
+set-option -g status-right-length 100
+#set-option -g status-right ' | %Y-%m-%d %H:%M #[default]'
+set-option -g mode-style "fg=default,bg=$color_main"
+## command line style
+set-option -g message-style "fg=$color_main,bg=$color_dark"
+## status line style
+set-option -g status-style "fg=$color_status_text,bg=$color_dark"
+## window segments in status line
+set -g window-status-separator ""
+separator_powerline_left=""
+separator_powerline_right=""
+# define widgets we're going to use in status bar
+# note, that this is not the complete list, some of them are loaded from plugins
+wg_session="#[fg=$color_session_text] #S #[default]"
+wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
+wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
+wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
+wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
+# TODO: highlighted for nested local session as well
+wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+
+set -g status-left "$wg_session"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+
+# online and offline icon for tmux-online-status
+set -g @online_icon "#[fg=$color_level_ok]●#[default]"
+set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
+
+# Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
+set -g @sysstat_mem_view_tmpl 'MEM:#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+
+# Configure colors for tmux-plugin-sysstat "MEM" and "CPU" widget
+set -g @sysstat_cpu_color_low "$color_level_ok"
+set -g @sysstat_cpu_color_medium "$color_level_warn"
+set -g @sysstat_cpu_color_stress "$color_level_stress"
+
+set -g @sysstat_mem_color_low "$color_level_ok"
+set -g @sysstat_mem_color_medium "$color_level_warn"
+set -g @sysstat_mem_color_stress "$color_level_stress"
+
+set -g @sysstat_swap_color_low "$color_level_ok"
+set -g @sysstat_swap_color_medium "$color_level_warn"
+set -g @sysstat_swap_color_stress "$color_level_stress"
+
+
+# Configure tmux-battery widget colors
+set -g @batt_color_full_charge "#[fg=$color_level_ok]"
+set -g @batt_color_high_charge "#[fg=$color_level_ok]"
+set -g @batt_color_medium_charge "#[fg=$color_level_warn]"
+set -g @batt_color_low_charge "#[fg=$color_level_stress]"
+
+# Configure tmux-prefix-highlight colors
+set -g @prefix_highlight_output_prefix '['
+set -g @prefix_highlight_output_suffix ']'
+set -g @prefix_highlight_fg "$color_dark"
+set -g @prefix_highlight_bg "$color_secondary"
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
+
+
+## hide status bar on demand
+bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
 # enabling h, j, k, l
 setw -g mode-keys vi
@@ -32,21 +126,39 @@ bind -r < resize-pane -L 4
 bind -r > resize-pane -R 4
 bind -r - resize-pane -D 4
 bind -r + resize-pane -U 4
+## window navigation
+bind-key -n M-C-h prev
+bind-key -n M-C-l next
 
 # easily toggle synchronization (mnemonic: e is for echo)
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 
-# Clipboard settings
+# clipboard settings
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
-## Setup 'v' to begin selection as in Vim
+## setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-## Update default binding of `Enter` to also use copy-pipe
+## update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-## Bind ']' to use pbpaste
+# when scrolling with mouse wheel, reduce number of scrolled rows per tick to "2" (default is 5)
+bind -T copy-mode-vi WheelUpPane       select-pane \; send-keys -X -N 2 scroll-up
+bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
+
+## bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# tpm plugins
+## list of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+## initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
