Try using hub to create pull-requests in the command line

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,6 +21,11 @@
     wc = whatchanged --pretty=format:'%Cred%h %ad%Creset | %C(yellow)%d%Creset %s %C(bold blue)[%an]%Creset' --abbrev-commit --date=short --name-status
     type = cat-file -t
     dump = cat-file -p
+    mkpr = "!f() { \
+    BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD); \
+    git push -u origin "${BRANCH_NAME}"; \
+    hub pull-request --no-edit; \
+    };f"
 
 [diff]
     tool = opendiff
