--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # remap prefix to Control + a
 unbind C-b
@@ -76,6 +76,7 @@ wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show
 
 set -g status-left "$wg_session"
 set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+set -g status-interval 10
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]●#[default]"
@@ -112,7 +113,6 @@ set -g @prefix_highlight_bg "$color_secondary"
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
 
-
 ## hide status bar on demand
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
@@ -135,7 +135,8 @@ bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 
 # clipboard settings
-set-option -g default-command "reattach-to-user-namespace -l bash"
+#set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 ## setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -157,8 +158,8 @@ bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux past
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+#set -g @plugin 'tmux-plugins/tmux-online-status'
 ## initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
