Do not reattach zsh to user space

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -136,7 +136,7 @@ bind E setw synchronize-panes off
 
 # clipboard settings
 #set-option -g default-command "reattach-to-user-namespace -l bash"
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 ## setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi v send-keys -X begin-selection
