--- a/alacritty/.alacritty.yml
+++ b/alacritty/.alacritty.yml
@@ -17,7 +17,8 @@ bell:
   duration: 0
 
 # Background opacity
-background_opacity: 1.0
+window:
+  opacity: 1.0
 
 # Mouse bindings
 #
@@ -49,7 +50,7 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: true
 
-  url:
+  hints:
     # URL launcher
     #
     # This program is executed when clicking on a text which is recognized as a URL.
