--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',screen-256color:RGB'
 
 # remap prefix to Control + a
 unbind C-b
