--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
+set-option -ga terminal-overrides ',screen-256color:Tc'
 set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',screen-256color:RGB'
 
 # remap prefix to Control + a
 unbind C-b
